--- a/index.html
+++ b/index.html
@@ -14,33 +14,51 @@
 
     <script>
         const size = 700;
+        const myCanvas = document.getElementById('myCanvas');  // Access the canvas ele
+
         myCanvas.width = size;
-        myCanvas.height = size;
+        myCanvas.height = size / 2;
         const trackCenter = { x: size / 2, y: size / 2 };
-        const trackRadius = 100;
-        const ballRadius = 10;
-        const ballSpeed = 0.02;
+        const trackMinRadius = 50;
+        const trackStep = 15;
+        const ballRadius = 6;
+        const ballMinSpeed = 0.01;
+        const ballSpeedStep = -0.0001;
+
+
+        const soundFrequencies = [
+            1760, 1567.98, 1396.91, 1318.51, 1174.66, 1046.5, 987.77, 880,
+            783.99, 698.46, 659.25, 587.33, 523.25, 493.88, 440, 392, 349.23,
+            329.63, 293.66, 261.63];
+        //creating multiple tracks and balls
+        const tracks = [];
+        const balls = [];
+        const N = 20;
+
+        for (let i = 0; i < N; i++) {
+            const trackRadius = trackMinRadius + i * trackStep;
+            const ballSpeed = ballMinSpeed + i * ballSpeedStep;
+            const ballSoundFrequency = soundFrequencies[i];
+            const hue = (i * 360) / N;
+            const track = new Track(trackCenter, trackRadius, hue);
+            const ball = new Ball(track, ballRadius, ballSpeed, ballSoundFrequency, hue);
+            tracks.push(track);
+            balls.push(ball);
+
+        }
         // Accessing canvas drawing context
         const ctx = myCanvas.getContext("2d");
-        const track = new Track(trackCenter, trackRadius);
-        const ball = new Ball(track, ballRadius, ballSpeed);
         //making animation of the ball 
         animate();
         function animate() {
             //clearing every thisg from the canvas
             ctx.clearRect(0, 0, size, size);
             //redrawing things on each frame
-            track.draw(ctx);
-            //making the ball move
-            ball.move();
-            ball.draw(ctx);
-
+            tracks.forEach((track) => track.draw(ctx));
+            balls.forEach((ball) => ball.move());
+            balls.forEach((ball) => ball.draw(ctx));
             requestAnimationFrame(animate);
-
-        }
-
-
-
+        };
 
     </script>
 </body>
